Cuarto commit - Modificando portafolio

--- a/index.html
+++ b/index.html
@@ -111,86 +111,63 @@
 
 <!-- Sección de Habilidades -->
 <section id="habilidades" class="py-5">
-    <div class="container">
-      <h2 class="text-center">Habilidades</h2>
-      <hr class="section-divider" />
-  
-      <!-- Lenguajes de programación -->
-      <div class="text-center mb-4">
-        <h3>Lenguajes de programación</h3>
-        <div class="row justify-content-center">
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/html.png" alt="HTML5" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/css.png" alt="CSS3" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/javascript.png" alt="JavaScript" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/php.png" alt="PHP" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/java.png" alt="Java" class="skill-image" />
-          </div>
-        </div>
-      </div>
-  
-      <!-- Frameworks y librerías -->
-      <div class="text-center mb-4">
-        <h3>Frameworks y Librerías</h3>
-        <div class="row justify-content-center">
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/bootstrap.png" alt="Bootstrap" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/smarty.png" alt="Smarty" class="skill-image" />
-          </div>
-        </div>
-      </div>
-  
-      <!-- Bases de datos -->
-      <div class="text-center mb-4">
-        <h3>Bases de Datos</h3>
-        <div class="row justify-content-center">
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/mysql.png" alt="MySQL" class="skill-image" />
-          </div>
-        </div>
-      </div>
-  
-      <!-- Herramientas de Control de Versiones -->
-      <div class="text-center">
-        <h3>Herramientas de Control de Versiones</h3>
-        <div class="row justify-content-center">
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/git.png" alt="Git" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/github.png" alt="GitHub" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-2">
-            <img src="./css/imagenes/gitlab.png" alt="GitLab" class="skill-image" />
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="container">
+    <h2 class="text-center">Habilidades</h2>
+    <hr class="section-divider" />
 
-    <!-- Herramientas de Gestion de Proyectos -->
-    <div class="text-center">
-        <h3>Herramientas de Gestion de Proyectos</h3>
-        <div class="row justify-content-center">
-          <div class="col-6 col-md-4 col-lg-1">
-            <img src="./css/imagenes/trello.png" alt="Trello" class="skill-image" />
-          </div>
-          <div class="col-6 col-md-4 col-lg-1">
-            <img src="./css/imagenes/draw.io.png" alt="Draw.io" class="skill-image" />
-          </div>
-        </div>
+    <!-- Lenguajes de programación -->
+    <div class="text-center mb-4">
+      <h3>Lenguajes de programación</h3>
+      <div class="row justify-content-center">
+        <img src="./css/imagenes/html.png" alt="HTML" class="skill-image" />
+        <img src="./css/imagenes/css.png" alt="CSS" class="skill-image" />
+        <img src="./css/imagenes/javascript.png" alt="JavaScript" class="skill-image" />
+        <img src="./css/imagenes/php.png" alt="PHP" class="skill-image" />
+        <img src="./css/imagenes/java.png" alt="Java" class="skill-image" />
       </div>
     </div>
-  </section>
+    <div class="divider"></div>
+
+    <!-- Frameworks y librerías -->
+    <div class="text-center mb-4">
+      <h3>Frameworks y Librerías</h3>
+      <div class="row justify-content-center">
+        <img src="./css/imagenes/bootstrap.png" alt="Bootstrap" class="skill-image" />
+        <img src="./css/imagenes/smarty.png" alt="Smarty" class="skill-image" />
+      </div>
+    </div>
+    <div class="divider"></div>
+
+    <!-- Bases de datos -->
+    <div class="text-center mb-4">
+      <h3>Bases de Datos</h3>
+      <div class="row justify-content-center">
+        <img src="./css/imagenes/mysql.png" alt="MySQL" class="skill-image" />
+      </div>
+    </div>
+    <div class="divider"></div>
+
+    <!-- Herramientas de Control de Versiones -->
+    <div class="text-center mb-4">
+      <h3>Herramientas de Control de Versiones</h3>
+      <div class="row justify-content-center">
+        <img src="./css/imagenes/git.png" alt="Git" class="skill-image" />
+        <img src="./css/imagenes/github.png" alt="GitHub" class="skill-image" />
+        <img src="./css/imagenes/gitlab.png" alt="GitLab" class="skill-image" />
+      </div>
+    </div>
+    <div class="divider"></div>
+
+    <!-- Herramientas de Gestión de Proyectos -->
+    <div class="text-center">
+      <h3>Herramientas de Gestión de Proyectos</h3>
+      <div class="row justify-content-center">
+        <img src="./css/imagenes/trello.png" alt="Trello" class="skill-image" />
+        <img src="./css/imagenes/draw.io.png" alt="Draw.io" class="skill-image" />
+      </div>
+    </div>
+  </div>
+</section>
   
   <section id="proyectos" class="py-5 align-items-center text-center text-white bg-dark">
     <div class="container">
@@ -224,7 +201,9 @@
                 <span class="project-name">API Airline</span>
               </div>
             </a>
+            
           </div>
+          
         </div>
       </div>
     </div>
