--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </section>
 
-    <section id="sobre-mi" class="py-5 text-center text-white bg-dark">
+    <section id="sobre-mi" class="py-5 text-center text-white">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6">
@@ -88,9 +88,10 @@
             </p>
             <p class="lead">
               Poseo el título de "Técnico Personal y Profesional en Informática"
-              obtenido en la Escuela Secundaria Técnica N° 3 (EEST). Donde pude
-              adquirir conocimientos basicos de Visual Basic, bases de datos,
-              mantenimiento de hardware y software, etc. Actualmente, me
+              obtenido en la Escuela Secundaria Técnica N°3 (EEST).
+            </p>
+
+            <p class = "lead">Actualmente, me
               encuentro cursando la Tecnicatura Universitaria en Desarrollo de
               Aplicaciones Informáticas "TUDAI" en la sede Quequén de UNICEN.
               Con el objetivo de continuar fortaleciendo mis conocimientos en
@@ -175,7 +176,7 @@
       <hr class="section-divider" />
   
       <div class="row justify-content-center text-center"> <!-- Modificamos esta línea -->
-        <div class="col-md-4">
+        <div class="col-md-4 mx-auto">
           <div class="project-item">
             <a href="https://github.com/FedeCordeiro/Airline-WEB2" target="_blank">
               <img
@@ -189,7 +190,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mx-auto">
           <div class="project-item">
             <a href="https://github.com/FedeCordeiro/AirlineAPI-WEB2" target="_blank">
               <img
