--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
         <h2>Contacto</h2>
         <hr class="section-divider" />
         <p>
-          Proporciona información de contacto para que los visitantes puedan
-          comunicarse contigo.
+          ¿Queres contactarme? Estoy disponible por correo electrónico para cualquier consulta o colaboración.
         </p>
         <a href="mailto:federico.cordeiro95@gmail.com" class="btn btn-primary"
           >Enviar Correo</a
