--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div>
           <a
             id="descargacv"
-            href="imagenes/Cordeiro Federico - CV.pdf"
+            href="imagenes/CV-CordeiroFederico.pdf"
             target="_blank"
             download="Cv"
             class="btn btn-primary btn-lg"
